--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "better-sqlite3": "^12.6.2",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "redis": "^5.11.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
